--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -388,6 +388,7 @@ if(LEVELDB_BUILD_TESTS)
   endfunction(leveldb_test)
 
   leveldb_test("db/c_test.c")
+  leveldb_test("example/main.cpp")
 
   if(NOT BUILD_SHARED_LIBS)
     # TODO(costan): This test also uses
